--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </h1>
     <hr />
     <h2>
-        Desafio complementario #1
+        Desafio Entregable #1
     </h2>
     <!-- script js -->
     <script src="./js/main.js"></script>
