agregando DOM y Eventos

--- a/index.html
+++ b/index.html
@@ -14,9 +14,35 @@
         </span>
     </h1>
     <hr />
-    <h2>
-        Primera entrega del Proyecto Final
+    <h2 id="titulo">
+        DOM + Eventos
     </h2>
+
+    <hr>
+
+    <section>
+        <form>
+            <div>
+                <label for="nombre">Nombre Completo</label>
+                <input type="text" id="nombre">
+                <p></p>
+            </div>
+
+            <div>
+                <label for="email">Email</label>
+                <input type="email" id="email">
+                <p></p>
+            </div>
+
+            <div>
+                <label for="contraseña">Contraseña</label>
+                <input type="password" id="contraseña">
+                <p></p>
+            </div>
+            <p id="mensaje"></p>
+            <input type="button" value="Registrarse" id="btn">
+        </form>
+    </section>
     <!-- script js -->
     <script src="./js/main.js"></script>
 </body>
