--- a/index.html
+++ b/index.html
@@ -4,46 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/styles.css">
-    <title>JavaScript</title>
+    <link rel="stylesheet" href="./bootstrap-5.1.3-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./css/stylesjs.css">
+    <link rel="shortcut icon" href="./img/logo.png">
+    <title>Valkiria | Iniciar sesion</title>
 </head>
 <body>
-    <h1>
-        <span>
-            JavaScript
-        </span>
-    </h1>
-    <hr />
-    <h2 id="titulo">
-        DOM + Eventos
-    </h2>
-
-    <hr>
-
-    <section>
-        <form>
-            <div>
-                <label for="nombre">Nombre Completo</label>
-                <input type="text" id="nombre">
-                <p></p>
+    <section class="form-seccion">
+        <div class="form-contenedor">
+            <div class="form-box">
+                <h3>Bienvenido</h3>
+                <form>
+                    <div class="input-box">
+                        <input type="email" placeholder="Email" class="input-control email">
+                    </div>
+                    <div class="input-box">
+                        <input type="password" placeholder="Password" class="input-control password">
+                    </div>
+                    <p id="mensaje"></p>
+                    <input type="submit" value="Iniciar sesion" class="btn ingresar">
+                </form>
+                <p class="p-login">¿No tenes cuenta?<a href="./pag/registrarse.html" class="a-login">Registrarse</a></p>
             </div>
-
-            <div>
-                <label for="email">Email</label>
-                <input type="email" id="email">
-                <p></p>
-            </div>
-
-            <div>
-                <label for="contraseña">Contraseña</label>
-                <input type="password" id="contraseña">
-                <p></p>
-            </div>
-            <p id="mensaje"></p>
-            <input type="button" value="Registrarse" id="btn">
-        </form>
+        </div>
     </section>
     <!-- script js -->
     <script src="./js/main.js"></script>
+    <script src="./js/ingreso.js"></script>
 </body>
 </html>
