--- a/pag/inicio.html
+++ b/pag/inicio.html
@@ -25,7 +25,7 @@
     <header class="container-fluid contenedorHeader">
         <div class="cajaHeader row">
             <a class="cajaLogoNav col-1" href="./inicio.html">
-                <img class="logo" src="../img/logo.png" alt="Valkiria">
+                <img class="logo" src="../img/logo.png" alt="LogoValkiria">
             </a>
 
             <div class="cajaValkiriaNav col-3">
