--- a/pag/registrarse.html
+++ b/pag/registrarse.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../bootstrap-5.1.3-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <link rel="stylesheet" href="../css/stylesjs.css">
     <link rel="shortcut icon" href="../img/logo.png">
     <title>Valkiria | Registrarse</title>
@@ -35,6 +36,8 @@
         </div>
     </section>
     <!-- script js -->
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.4.24/dist/sweetalert2.all.min.js"></script>
     <script src="../js/main.js"></script>
     <script src="../js/registro.js"></script>
 </body>
