--- a/pag/registrarse.html
+++ b/pag/registrarse.html
@@ -7,11 +7,18 @@
     <link rel="stylesheet" href="../bootstrap-5.1.3-dist/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <link rel="stylesheet" href="../css/stylesjs.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Open+Sans:wght@500&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="../img/logo.png">
     <title>Valkiria | Registrarse</title>
 </head>
 <body>
     <section class="form-seccion">
+        <div class="box-valkiria">
+            <img class="logo-valkiria" src="../img/logo.png" alt="LogoValkiria">
+            <h1 class="h1-valkiria">Valkiria</h1>
+        </div>
         <div class="form-contenedor">
             <div class="form-box">
                 <h3>Bienvenido</h3>
