--- a/pag/carrito.html
+++ b/pag/carrito.html
@@ -97,15 +97,11 @@
             </a>
         </div>
         
-        <nav class="navbar navbarBuscar navbar-light">
-            <div class="d-flex cajaBuscar">     
-                <img class="buscarButton" src="../img/buscar.webp" alt="Buscar"> 
-                <input class="form-control buscarTienda" type="search" placeholder="Buscar">
-            </div>
-        </nav>
-    
-        <div class="row contenedorTienda">
-            <!--Contenido Tienda-->
+        <div class="row contenedorCarrito">
+            <!--Contenido carrito-->
+        </div>
+        <div class="contenedorResumen">
+            <!--Contenido resumen-->
         </div>
     </section>
     <!-- WHATSAPP FLOTANTE -->
@@ -169,7 +165,7 @@
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
     </script>
     <!-- script js -->
-    <script src="../js/tienda.js"></script>
+    <script src="../js/carrito.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 </body>
 </html>
