--- a/pag/comprar.html
+++ b/pag/comprar.html
@@ -96,16 +96,37 @@
                 DERMOPURITY
             </a>
         </div>
-        
-        <nav class="navbar navbarBuscar navbar-light">
-            <div class="d-flex cajaBuscar">     
-                <img class="buscarButton" src="../img/buscar.webp" alt="Buscar"> 
-                <input class="form-control buscarTienda" type="search" placeholder="Buscar">
+        <div class="contenedorCompra">
+            <div class="contenedorForm">
+                <div class="row">
+                    <p class="cajaForm center">
+                        Vamos a finalizar la compra!
+                    </p>
+                    <div class="col-12 cajaForm">
+                        <label for="nombre">Nombre</label>
+                        <input type="text" class="form-control nombreCompra">
+                    </div>
+                    <div class="col-12 cajaForm">
+                        <label for="apellido">Email</label>
+                        <input type="email" class="form-control emailCompra">
+                    </div>
+                    <div class="col-12 cajaForm">
+                        <label for="tarjeta">Nro. tarjeta</label>
+                        <input type="text" class="form-control tarjeta">
+                    </div>
+                    <div class="col-12 cajaForm">
+                        <label for="vencimiento">Fecha de vencimiento</label>
+                        <input type="text" class="form-control vencimiento">
+                    </div>
+                    <div class="col-12 cajaForm">
+                        <label for="codigo">Codigo de seguridad</label>
+                        <input type="text" class="form-control codigo">
+                    </div>
+                    <div class="col-12 cajaForm center">
+                        <button data-bs-toggle="modal" data-bs-target="#exampleModal" type="submit" class="btnComprar">Confirmar</button>
+                    </div>
+                </div>
             </div>
-        </nav>
-    
-        <div class="row contenedorTienda">
-            <!--Contenido Tienda-->
         </div>
     </section>
     <!-- WHATSAPP FLOTANTE -->
@@ -168,8 +189,12 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" 
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
     </script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.4.24/dist/sweetalert2.all.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/cleave.js@1.6.0/dist/cleave.min.js"></script>
     <!-- script js -->
-    <script src="../js/tienda.js"></script>
+    <script src="cleave.min.js"></script>
+    <script src="../js/comprar.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 </body>
 </html>
